--- a/ppad-poly1305.cabal
+++ b/ppad-poly1305.cabal
@@ -14,6 +14,11 @@ description:
   A pure Poly1305 message authentication code, per
   [RFC8439](https://datatracker.ietf.org/doc/html/rfc8439).
 
+flag llvm
+  description: Use GHC's LLVM backend.
+  default:     False
+  manual:      True
+
 source-repository head
   type:     git
   location: git.ppad.tech/poly1305.git
@@ -23,11 +28,14 @@ library
   hs-source-dirs:   lib
   ghc-options:
       -Wall
+  if flag(llvm)
+    ghc-options: -fllvm -O2
   exposed-modules:
       Crypto.MAC.Poly1305
   build-depends:
       base >= 4.9 && < 5
     , bytestring >= 0.9 && < 0.13
+    , ppad-fixed >= 0.1 && < 0.2
 
 test-suite poly1305-tests
   type:                exitcode-stdio-1.0
